# social-network-simulation

./: .dockerignore  .gitignore  README.md  database.db  pyproject.toml
social_network_simulation/: api.py  app.py
social_network_simulation/core/: database.py  deps.py  settings.py
social_network_simulation/models/: user_model.py  utils.py
social_network_simulation/routes/v1/: __init__.py  user_router.py
social_network_simulation/schemas/: user_schema.py
social_network_simulation/services/: base_service.py  user_service.py
tests/: conftest.py  test_app.py  test_user.py
