[project]
name = "Simulação de rede social"

[tool.poetry]
name = "simulacao-rede-social"
version = "0.1.0"
description = ""
authors = ["Felipe Gomes Duarte <xfelipegd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = {extras = ["standard"], version = ">=0.112.2"}
uvicorn = {extras = ["standard"], version = ">=0.30.6"}
sqlalchemy = ">=2.0.32"
psycopg2-binary = ">=2.9.9"
asyncpg = ">=0.29.0"
alembic = ">=1.13.2"
pydantic-settings = "^2.4.0"
gunicorn = ">=23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.2"
httpx = ">=0.27.2"
pytest-cov = ">=5.0.0"
ruff = ">=0.6.3"
taskipy = "^1.13.0"
testcontainers = "^4.8.1"
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"


[tool.taskipy.tasks]
run = "fastapi dev social_network_simulation/app.py"
deploy = "gunicorn social_network_simulation.app:app --workers=4 --worker-class uvicorn.workers.UvicornWorker --bind=0.0.0.0:5000"
lint = "ruff check . --fix; ruff format ."
pre_test = "task lint"
test = "pytest -s -v --cov social_network_simulation -vv" #  -x
coverage = "coverage html"
recreate = "python -c \"from social_network_simulation.core.database import recreate_tables ; recreate_tables() \" "


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
